Fixed username in dropdown alignment

--- a/web/source/sass/pages/navbar.scss
+++ b/web/source/sass/pages/navbar.scss
@@ -108,6 +108,7 @@
         right: 1em;
         white-space: nowrap;
         display: flex;
+        float: right;
 
         .business-image {
             display: inline-block;
